@@ -6,6 +6,7 @@ import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
 import java.util.logging.Level;
 import java.util.stream.Collectors;
 
@@ -77,11 +78,15 @@ public class ComparatorCaches {
 	@SuppressWarnings("unchecked")
 	private static List<Pair<UUID, Component>> gatherTownLines(ComparatorType compType) {
 		List<Pair<UUID, Component>> output = new ArrayList<>();
-		List<Town> towns = TownyUniverse.getInstance().getTowns().stream().filter(Town::isVisibleOnTopLists).collect(Collectors.toList());
-		towns.sort((Comparator<? super Town>) compType.getComparator());
+		List<Town> towns = TownyUniverse.getInstance().getTowns().stream()
+			.filter(Town::isVisibleOnTopLists)
+			.filter((Predicate<? super Town>) compType.getPredicate())
+			.sorted((Comparator<? super Town>) compType.getComparator())
+			.toList();
 
 		boolean spawningFullyDisabled = !TownySettings.isConfigAllowingTownSpawn() && !TownySettings.isConfigAllowingPublicTownSpawnTravel()
 				&& !TownySettings.isConfigAllowingTownSpawnNationTravel() && !TownySettings.isConfigAllowingTownSpawnNationAllyTravel();
+		boolean ignorePoorBanks = TownySettings.areZeroOrLowerBankAccountsHiddenOnLists();
 
 		for (Town town : towns) {
 			Component townName = Component.text(StringMgmt.remUnderscore(town.getName()), NamedTextColor.AQUA);
@@ -89,10 +94,15 @@ public class ComparatorCaches {
 			String slug = "";
 			switch (compType) {
 			case BALANCE:
+				if (ignorePoorBanks && town.getAccount().getCachedBalance() <= 0)
+					continue;
 				slug = "(" + TownyEconomyHandler.getFormattedBalance(town.getAccount().getCachedBalance()) + ")";
 				break;
 			case TOWNBLOCKS:
 				slug = "(" + town.getTownBlocks().size() + ")";
+				break;
+			case FORSALE:
+				slug = "(" + getResidentCount(town) + ") " + (town.isForSale() ? Translation.of("status_forsale", TownyEconomyHandler.getFormattedBalance(town.getForSalePrice())) : "");
 				break;
 			case RUINED:
 				slug = "(" + getResidentCount(town) + ") " + (town.isRuined() ? Translation.of("msg_ruined"):"");
@@ -120,13 +130,19 @@ public class ComparatorCaches {
 			if (town.isOpen())
 				townName = townName.append(Component.space()).append(Translatable.of("status_title_open").component());
 
+			townName = townName.clickEvent(ClickEvent.runCommand("/towny:town " + town));
+			townName = townName.hoverEvent(HoverEvent.showText(Translatable.of("msg_click_town_info").component()));
+
 			if (!spawningFullyDisabled) {
 				Translatable spawnCost = Translatable.of("msg_spawn_cost_free");
 				if (TownyEconomyHandler.isActive())
 					spawnCost = Translatable.of("msg_spawn_cost", TownyEconomyHandler.getFormattedBalance(town.getSpawnCost()));
 
-				townName = townName.clickEvent(ClickEvent.runCommand("/towny:town spawn " + town + " -ignore"));
-				townName = townName.hoverEvent(HoverEvent.showText(Translatable.of("msg_click_spawn", town).append("\n").append(spawnCost).component()));
+				Component spawnComponent = Translatable.of("msg_click_spawn_brief").component();
+				spawnComponent = spawnComponent.clickEvent(ClickEvent.runCommand("/towny:town spawn " + town + " -ignore"));
+				spawnComponent = spawnComponent.hoverEvent(HoverEvent.showText(Translatable.of("msg_click_spawn", town).append("\n").append(spawnCost).component()));
+
+				townName = townName.append(Component.text(" - ", NamedTextColor.DARK_GRAY)).append(spawnComponent);
 			}
 			output.add(Pair.pair(town.getUUID(), townName));
 		}
@@ -143,10 +159,12 @@ public class ComparatorCaches {
 	@SuppressWarnings("unchecked")
 	private static List<Pair<UUID, Component>> gatherNationLines(ComparatorType compType) {
 		List<Pair<UUID, Component>> output = new ArrayList<>();
-		List<Nation> nations = new ArrayList<>(TownyUniverse.getInstance().getNations());
 
-		//Sort nations
-		nations.sort((Comparator<? super Nation>) compType.getComparator());
+		List<Nation> nations = TownyUniverse.getInstance().getNations().stream()
+			.filter((Predicate<? super Nation>) compType.getPredicate())
+			.sorted((Comparator<? super Nation>) compType.getComparator())
+			.collect(Collectors.toCollection(ArrayList::new)); // Mutable list because of the event
+
 		DisplayedNationsListSortEvent nationListSortEvent = new DisplayedNationsListSortEvent(nations, compType);
 		BukkitTools.fireEvent(nationListSortEvent);
 		nations = nationListSortEvent.getNations();
@@ -200,13 +218,19 @@ public class ComparatorCaches {
 			if (nation.isOpen())
 				nationName = nationName.append(Component.space()).append(Translatable.of("status_title_open").component());
 
+			nationName = nationName.clickEvent(ClickEvent.runCommand("/towny:nation " + nation));
+			nationName = nationName.hoverEvent(HoverEvent.showText(Translatable.of("msg_click_nation_info").component()));
+
 			if (!spawningFullyDisabled) {
 				Translatable spawnCost = Translatable.of("msg_spawn_cost_free");
 				if (TownyEconomyHandler.isActive())
 					spawnCost = Translatable.of("msg_spawn_cost", TownyEconomyHandler.getFormattedBalance(nation.getSpawnCost()));
 
-				nationName = nationName.clickEvent(ClickEvent.runCommand("/towny:nation spawn " + nation + " -ignore"));
-				nationName = nationName.hoverEvent(HoverEvent.showText(Translatable.of("msg_click_spawn", nation).append("\n").append(spawnCost).component()));
+				Component spawnComponent = Translatable.of("msg_click_spawn_brief").component();
+				spawnComponent = spawnComponent.clickEvent(ClickEvent.runCommand("/towny:nation spawn " + nation + " -ignore"));
+				spawnComponent = spawnComponent.hoverEvent(HoverEvent.showText(Translatable.of("msg_click_spawn", nation).append("\n").append(spawnCost).component()));
+
+				nationName = nationName.append(Component.text(" - ", NamedTextColor.DARK_GRAY)).append(spawnComponent);
 			}
 			output.add(Pair.pair(nation.getUUID(), nationName));
 		}
